asterisk (1:1.8.8.2~dfsg-1) unstable; urgency=high

  * New upstream release (Closes: #656596).

 -- Tzafrir Cohen <tzafrir@debian.org>  Fri, 20 Jan 2012 13:28:00 +0200

asterisk (1:1.8.8.0~dfsg-1) unstable; urgency=high

  [ Faidon Liambotis ]
  * Fix Breaks/Conflicts to contain the epoch.
  * Urgency high since this resulted in file conflicts when upgrading from
    stable.
  * Patch reenable-pri-optional: Backport a patch from upstream to fix
    several PRI features being compiled-out and hence disabled.
  * Bump libpri-dev dependency to 1.4.12; it is not strictly needed but extra
    functionality is enabled at build-time.

  [ Tzafrir Cohen ]
  * New upstream release. Closes: #651552.
    - Patch reenable-pri-optional dropped: included upstream.
  * Officially remove asterisk-h323:
    - Break older versions, as it did not have a versioned Depends before.
    - Remove the package.
  * Update watch file to only check for 1.8.x tarballs.
  * Quote pathes in postinst script: Closes: #656208 (Pocos).

 -- Tzafrir Cohen <tzafrir@debian.org>  Wed, 18 Jan 2012 15:26:34 +0200

asterisk (1:1.8.7.1~dfsg-2) unstable; urgency=low

  * libncurses is a build dep afterall (Closes: #649431).

 -- Tzafrir Cohen <tzafrir@debian.org>  Fri, 25 Nov 2011 16:44:31 +0200

asterisk (1:1.8.7.1~dfsg-1) unstable; urgency=high

  [ Tzafrir Cohen ]
  * New upstream release (Closes: #647252):
    - Patch refix_bashism removed: applied upstream.
    - Patch openssl10 removed: applied upstream.
    - Patch gmime-2.4 removed: applied upstream.
    - Patch gcc46 removed - was a backport from upstream.
  * Disable chan_h323: broken with current h323plus, and not loved by
    upstream.
  * Patch chan_iax2-detach-thread-on-non-stop-exit: Hopefully plugs a
    memory leak.
  * Patch reinclude_docs: a copy of the included documentation that was
    removed.
  * Patch sparc32_disable: Remove pointless optimization for sparc64

  [ Paul Belanger ]
  * Bump libpri-dev to 1.4.11.